--- a/src/Phase-1/index.org
+++ b/src/Phase-1/index.org
@@ -5,6 +5,16 @@
 #+PROPERTY: exports code
 #+SETUPFILE: ../org-templates/level-1.org 
 
+* The Goal
+The goal of the project is understanding the process of conversion from
+modelica to javascript
+The Idea is to be able to build a framework to seamlessly transpile c to client
+friendly javascript.
+
+* Phase 0 - Understanding the pipeline
+#+CAPTION: The intended Flow
+#+NAME:   fig:1
+[[./Flow.png]]
 * Phase 1 - Converting C to JavaScript
 C ( or rather =clang= generated llvm ) can be converted to javascript with the
 help of emscripten
@@ -149,7 +159,7 @@ code to compile it in c:
 code to compile it in JavaScript:
 =emcc graphics.c -o graphics.html=
 *** A simple program to read from a file
-** tangling code
+** Tangling code
 #+BEGIN_SRC c :eval no :noweb yes :tangle hello_world.c
 <<hello_world>> 
 #+END_SRC
@@ -161,3 +171,119 @@ code to compile it in JavaScript:
 #+BEGIN_SRC c :eval no :noweb yes :tangle graphics.c
 <<graphics>> 
 #+END_SRC
+* Progress so far
+** Efforts made:
+*** Sources found:
+**** [[https://github.com/tshort/openmodelica-javascript][Modelica Javascript
+]]This is a framework built by tom short to compile modelica to javascript the
+work by xogeny involved his tom's work.
+Example 1: [[http://tshort.github.io/mdpad/mdpad.html?Modelica.Electrical.Analog.Examples.ChuaCircuit.md][Chua Circuit]]
+The model ,if implemented ,could be very useful.
+Problems:
+- The build is broken, and the lack of sufficient documentation makes the
+  effort to repair it rather difficult.
+- The build only works on openmodelica that is compiled from source. The
+  compilation is proving next to impossible because of many conflicting
+  dependencies which i am unable to resolve by myself. 
+- Documentation on the work is sparse
+**** [[http://book.xogeny.com/][Modelica By Example]]
+The effort entailed understanding The models given as an example
+Example 1: [[http://book.xogeny.com/behavior/equations/population/][Lotka Volterra Systems]]
+Problems:
+- The models are rendered offline and served . it makes it rather improbable to
+  run the models offline only.
+  Capturing the models doesn't help as the paths are hard coded.
+- even if reverse engineered, the work in it's current form would involve a lot
+  of manual optimization which possible couldn't be delegated down to an
+  algorithm
+
+*** Correspondences made
+I emailed both Tom short and Xogeny.
+#+NAME tom-email-sent
+#+BEGIN_QUOTE
+Dear Tom,
+I am very interested in your work in compiling openmodelica to javascript.
+I want to use it to convert my institute's entire virtual learning platform to
+javascript.
+But i am having issues in understanding your work.
+For example,the packaged version of openmodelica doesn't come with a build
+directory.
+Also, in the packaged version,the core library files you replace are scattered throughout out the linux system.
+can you please help me set up a working framework?
+#+END_QUOTE
+
+#+NAME tom-email-received
+#+BEGIN_QUOTE
+Hello Keshav. This is the perfect application for this approach. 
+*Unfortunately, I have not kept up with changes in OpenModelica.*
+*Further, I lost my build a while back after a crash*,
+so I don't have a working system that can build this.
+I don't have time to try to recreate it in the near term.
+*Perhaps you could check with Michael Tiller of Xogeny.*
+He used my effort as a starting point to run live examples in his book:
+
+http://book.xogeny.com/
+
+You could check to see if he has a working build.
+#+END_QUOTE
+
+#+NAME xogeny-email-sent
+#+BEGIN_QUOTE email
+Hello Michael!
+I stumbled upon yours and tom short's work on converting modelica to javascript.
+I'm really interested in converting the virtual learning platform of my institute to javascript.
+I emailed tom regarding this but unfortunately tom did not have a viable build of work.
+Could you provide me certain pointers to leverage toms work to amke it viable for my own project?
+I'm having certain basic issues in getting it to work.
+If you can spare some time,could you tell me the process by which you incorporated it in your own work in a little detail?
+It will be immensely helpful.
+#+END_QUOTE
+
+I have not received a reply from Xogeny yet.
+*** Summary of problems
+**** Trouble compiling openmodelica from source
+Modelica has a list of dependencies that have conflicting demands in the core
+library,specifically this error ( this is just the latest one)
+#+NAME modelica-copile-error-1
+#+BEGIN_QUOTE
+The following packages have unmet dependencies:
+ openmodelica : Depends: omc but it is not going to be installed
+                Depends: omshell but it is not going to be installed
+                Depends: omshell-terminal but it is not going to be installed
+                Depends: omnotebook but it is not going to be installed
+                Depends: drmodelica but it is not going to be installed
+                Depends: drcontrol but it is not going to be installed
+                Depends: omedit but it is not going to be installed
+                Depends: omoptim but it is not going to be installed
+
+ omc : Depends: libcolamd2.7.1 (>= 1:3.4.0) but it is not installable
+       Depends: libhdf5-serial-1.8.4 but it is not installable or
+                libhdf5-1.8.4 but it is not installable
+       Depends: liblapack3gf but it is not installable or
+                liblapack.so.3gf but it is not installable or
+                libatlas3gf-base but it is not installable
+       Recommends: python-beautifulsoup but it is not going to be installed
+       Recommends: omplot but it is not going to be installed
+       Recommends: libsaxonb-java but it is not going to be installed
+
+libcolamd2.7.1:i386 is already the newest version (1:3.4.0-3).
+0 upgraded, 0 newly installed, 0 to remove and 5 not upgraded.
+#+END_QUOTE
+**** Getting Tom's framework to run
+Tom's framework is dependant on a compiled version of openmodelica as the paths
+in his [[https://github.com/tshort/openmodelica-javascript][work]] need a build folder i.e everything in one place, as evident by a
+reference in his instruction in =build/lib/omc= .
+The problems are not manually correctable as to find the references to the
+other files ,each weighing around 10 mb is a big task,with no gaurentee of
+success.
+without those corrections, the compiler would not compile a js version to run
+,as required by the rest of the framework.
+**** Getting Modelicas VM to run
+I was having trouble compiling openmodelica from source so i asked people over
+at openmodelica if they could supply me to a VM that has a source version pre-installed .
+They did have a VM ([[https://build.openmodelica.org/omc/builds/virtual_machines/stable64/openmodelica-1.11.0~dev.beta1-4-g9772f8e/][linked here]]) But even the VM had an installation which was
+done by the packaged version.
+I spent a while trying to get their VM to work as their release had hard coded
+paths which had issues with vagrant( specifically,the [[https://build.openmodelica.org/omc/builds/virtual_machines/stable64/openmodelica-1.11.0~dev.beta1-4-g9772f8e/OpenModelica-1.9.7/][log file]] was needed and
+access to it had been locked out and it's placement was hard coded into the VM )
+I had to resort to manually running the VM on Virtual Box, but it didn't help.
